# indri-git

./: INSTALL  LICENSE.txt  MakeDefns.in  Makefile  Makefile.app.in  README  configure  configure.ac  indri-VS2005.sln  indri-VS2008.sln  indri-VS2012.sln  indri.sln
ClueWebUtils/: WarcRecord.java
buildindex/: IndriBuildIndex.cpp  Makefile  buildindex-VS2005.vcproj  buildindex-VS2008.vcproj  buildindex-VS2012.vcxproj  buildindex.cpp  buildindex.vcproj
clarity/: clarity-VS2005.vcproj  clarity-VS2008.vcproj  clarity-VS2012.vcxproj  clarity.vcproj
contrib/: Makefile
contrib/antlr/: antlr-VS2005.vcproj  antlr-VS2008.vcproj  antlr-VS2010.vcxproj  antlr-VS2010.vcxproj.filters  antlr-VS2012.vcxproj  antlr.vcproj
contrib/lemur/: lemur-VS2005.vcproj  lemur-VS2008.vcproj  lemur-VS2012.vcxproj  lemur-VS2012.vcxproj.filters  lemur.vcproj
contrib/xpdf/: xpdf-VS2005.vcproj  xpdf-VS2008.vcproj  xpdf-VS2010.vcxproj  xpdf-VS2012.vcxproj  xpdf-VS2012.vcxproj.filters  xpdf.vcproj
contrib/zlib/: zlib-VS2005.vcproj  zlib-VS2008.vcproj  zlib-VS2010.vcxproj.filters  zlib-VS2012.vcxproj  zlib.vcproj
doc/: Indri Query Language Reference 092004.doc  IndriQueryLanguage.html  Makefile  config  querylang.txt
doc/JNIdoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  packages.html  serialized-form.html
doc/html/: AnchorTextAnnotator_8hpp-source.html  AnchorTextAnnotator_8hpp.html  AnchorTextWriter_8hpp-source.html  AnchorTextWriter_8hpp.html  Annotator_8cpp.html  Annotator_8hpp-source.html  Annotator_8hpp.html  Appliers_8hpp-source.html  Appliers_8hpp.html  BeliefNode_8hpp-source.html  BeliefNode_8hpp.html  Buffer_8hpp-source.html  Buffer_8hpp.html  CachedFrequencyBeliefNode_8cpp.html  CachedFrequencyBeliefNode_8hpp-source.html  CachedFrequencyBeliefNode_8hpp.html  Collection_8hpp-source.html  Collection_8hpp.html  Combiner_8cpp.html  Combiner_8hpp-source.html  Combiner_8hpp.html  CompressedCollection_8cpp.html  CompressedCollection_8hpp-source.html  CompressedCollection_8hpp.html  ContextCountAccumulator_8cpp.html  ContextCountAccumulator_8hpp-source.html  ContextCountAccumulator_8hpp.html  ContextCountGraphCopier_8hpp-source.html  ContextCountGraphCopier_8hpp.html  ContextCountGraphExtractor_8hpp-source.html  ContextCountGraphExtractor_8hpp.html  ContextSimpleCountCollectorCopier_8hpp-source.html  ContextSimpleCountCollectorCopier_8hpp.html  Copier_8cpp.html  Copier_8hpp-source.html  Copier_8hpp.html  CorpusStatistics_8hpp-source.html  CorpusStatistics_8hpp.html  DagCopier_8hpp-source.html  DagCopier_8hpp.html  (+953 more)
dumpindex/: dumpindex-VS2005.vcproj  dumpindex-VS2008.vcproj  dumpindex-VS2012.vcxproj  dumpindex.cpp  dumpindex.ncb  dumpindex.vcproj
harvestlinks/: Makefile  harvestlinks-VS2005.vcproj  harvestlinks-VS2008.vcproj  harvestlinks-VS2012.vcxproj  harvestlinks.cpp  harvestlinks.vcproj
include/indri/: AnchorTextAnnotator.hpp  AnchorTextWriter.hpp  Annotator.hpp  Appliers.hpp  BooleanAndNode.hpp  Buffer.hpp  BulkTree.hpp  CachedFrequencyBeliefNode.hpp  Combiner.hpp  CompressedCollection.hpp  ConditionVariable.hpp  Conflater.hpp  ConflationPattern.hpp  ContextCountAccumulator.hpp  ContextCountGraphCopier.hpp  ContextCountGraphExtractor.hpp  ContextSimpleCountAccumulator.hpp  ContextSimpleCountCollectorCopier.hpp  Copier.hpp  DagCopier.hpp  DateParse.hpp  DeletedDocumentList.hpp  DenseVocabularyMap.hpp  DirichletTermScoreFunction.hpp  DiskDocExtentListIterator.hpp  DiskDocListFileIterator.hpp  DiskDocListIterator.hpp  DiskDocumentDataIterator.hpp  DiskFrequentVocabularyIterator.hpp  DiskIndex.hpp  DiskKeyfileVocabularyIterator.hpp  DiskTermData.hpp  DiskTermListFileIterator.hpp  DocExtentListIterator.hpp  DocExtentListMemoryBuilder.hpp  DocListDiskBlockReader.hpp  DocListDiskBuilder.hpp  DocListFileIterator.hpp  DocListFrequencyIterator.hpp  DocListIterator.hpp  (+159 more)
indrid/: IndriDaemon.cpp  Makefile  indrid-VS2005.vcproj  indrid-VS2008.vcproj  indrid-VS2012.vcxproj  indrid.cpp  indrid.vcproj
makeprior/: makeprior-VS2005.vcproj  makeprior-VS2008.vcproj  makeprior-VS2012.vcxproj  makeprior.cpp  makeprior.vcproj
modifyfields/: ModifyFields-VS2005.vcproj  ModifyFields-VS2008.vcproj  ModifyFields-VS2012.vcxproj  ModifyFields.vcproj
pagerank/: pagerank-VS2005.vcproj  pagerank-VS2008.vcproj  pagerank-VS2012.vcxproj  pagerank.cpp  pagerank.vcproj
rmodel/: rmodel-VS2005.vcproj  rmodel-VS2008.vcproj  rmodel-VS2010.vcxproj  rmodel-VS2012.vcxproj  rmodel.cpp  rmodel.vcproj
runquery/: IndriRunQuery.cpp  Makefile  runquery-VS2005.vcproj  runquery-VS2008.vcproj  runquery-VS2012.vcxproj  runquery.cpp  runquery.vcproj
site-search/: Makefile  README  crawl-index.in  order.xml
site-search/cgi/: DBInterface.cpp  IndriSearchInterface.cpp  LemurCGI-VS2008.vcproj  LemurCGI-VS2012.vcxproj
src/: AnchorTextHarvester.cpp  Annotator.cpp  BooleanAndNode.cpp  BulkTree.cpp  CachedFrequencyBeliefNode.cpp  CombinedVocabularyIterator.cpp  Combiner.cpp  CompressedCollection.cpp  ContextCountAccumulator.cpp  ContextInclusionAndNode.cpp  ContextSimpleCountAccumulator.cpp  Copier.cpp  DeletedDocumentList.cpp  DirectoryIterator.cpp  DiskDocExtentListIterator.cpp  DiskDocListFileIterator.cpp  DiskDocListIterator.cpp  DiskDocumentDataIterator.cpp  DiskFrequentVocabularyIterator.cpp  DiskIndex.cpp  DiskKeyfileVocabularyIterator.cpp  DiskTermListFileIterator.cpp  DocExtentListMemoryBuilder.cpp  DocExtentListMemoryBuilderIterator.cpp  DocListFileIterator.cpp  DocListIteratorNode.cpp  DocListMemoryBuilder.cpp  DocListMemoryBuilderIterator.cpp  DocumentIteratorFactory.cpp  DocumentStructureHolderNode.cpp  DocumentVector.cpp  ExtentAndNode.cpp  ExtentChildNode.cpp  ExtentDescendantNode.cpp  ExtentEnforcementNode.cpp  ExtentInsideNode.cpp  ExtentOrNode.cpp  ExtentParentNode.cpp  ExtentRestrictionNode.cpp  FieldBetweenNode.cpp  (+97 more)
swig/: swig-VS2005.vcproj  swig-VS2008.vcproj  swig-VS2010.vcxproj  swig-VS2012.vcxproj  swig.vcproj
swig/src/: Makefile
(+118 files in other folders)
